--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "element-ui": "^2.15.6",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuedraggable": "^2.24.3"
   },
   "browserslist": [
     "> 1%",
